update build.sbt